# kevinlulee

./: .gitignore  README.md  pyproject.toml  setup.py  untitled.py
experiments/: abc.py  background_shell_process.py  background_shell_process_2.py  draw_cursor_april_21.py  find_pyproject_root.py  generate_brewer_color_palette.py  manimlib_doc.py  matplotlib_show.py  pynvim_highlights.py  resolve_dotted_path.py  ui_layout_4.py
kevinlulee/: __init__.py  __main__.py  ao.py  array.py  ascii.py  assertion.py  base.py  bash.py  configurable.py  constants.py  consts.py  date_utils.py  ddo.py  deprecated.py  dict_ops.py  edityaml.py  extended.py  fancy_filetree.py  fetch.py  file_ops.py  file_utils.py  generative.py  git.py  introspect.py  logger.py  lorem.py  module_utils.py  pickled.py  primary.py  pythonfmt.py  resolve_ops.py  ripgrep.py  schema_ops.py  serialize_ops.py  snapshot.py  string_utils.py  superfilter.py  temp.py  templater.py  test_utils.py  (+4 more)
kevinlulee/components/: string_builders.py
kevinlulee/configurable/: __init__.py
kevinlulee/experiments/: finding_deleted_git_repo_file.py  generate_brewer_color_palette.py  long_arithmetic_2_april_21.py  long_arithmetic_april_21.py  module_sorting_and_reloading.py  numpy_arrow.py  parse_diagram.py  polynomial_curve_via_bezier.py  quick_typst_file.py  see_running_background_processes.py  ui_layout_3.py  ui_layout_4.py  ui_layout_system_2.py  ui_layout_system_april_21.py
kevinlulee/generative/: __init__.py  agents.py  diff.py
tests/: test_ao.py  test_cpfile.py  test_ripgrep.py  test_templater.py  test_typstfmt.py
(+29 files in other folders)
