[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kevinlulee"
version = "0.1.0"
authors = [
  { name = "Kevin Lee", email = "kevinlulee1@gmail.com" },
]
description = "A collection of simple and useful utilities for file, string, and cmdline operations."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyyaml",
    "toml",
]

[project.urls]
"Homepage" = "https://github.com/kevinlulee/kevinlulee"

